src/objects/Model_N__c.object
<CustomObject>
    <description>This objects captures the information required for Model N user registeration</description>
    <fields>
        <fullName>Access_Type__c</fullName>
        <label>Access Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New User</fullName>
                </value>
                <value>
                    <fullName>Change Access</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Model_N_User_Registerations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Model_N_User_Registerations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Throughput_Time__c</fullName>
        <description>Approver Throughput Time</description>
        <formula>CASE( Status__c, 
&quot;Submitted&quot; , NULL , 
&quot;Pending&quot; , NOW() - Date_Time_Pending__c , 
&quot;Rejected&quot; , (Date_Time_Rejected__c - Date_Time_Pending__c) , 
Date_Time_Approved__c - Date_Time_Pending__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Approver Throughput Time</inlineHelpText>
        <label>Approver Throughput Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approver_s_List__c</fullName>
        <defaultValue>&quot;https://nxp.app.box.com/files/0/f/260810550/1/f_21404001073&quot;</defaultValue>
        <label>Approver&apos;s List</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Assigned_Org_VAR__c</fullName>
        <label>Assigned Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VAR AMEC - ATMI</fullName>
                </value>
                <value>
                    <fullName>VAR AMEC - BAE</fullName>
                </value>
                <value>
                    <fullName>VAR AMEC - CJR</fullName>
                </value>
                <value>
                    <fullName>VAR AMEC - CTC</fullName>
                </value>
                <value>
                    <fullName>VAR AMEC - DYNE-A-MARK</fullName>
                </value>
                <value>
                    <fullName>VAR AMEC - GIESTING</fullName>
                </value>
                <value>
                    <fullName>VAR AMEC - LOGIX SALES</fullName>
                </value>
                <value>
                    <fullName>VAR AMEC - MERCER TECH SALES</fullName>
                </value>
                <value>
                    <fullName>VAR AMEC - PHOENIX</fullName>
                </value>
                <value>
                    <fullName>VAR AMEC - SELTEC</fullName>
                </value>
                <value>
                    <fullName>VAR AMEC - STARVOY</fullName>
                </value>
                <value>
                    <fullName>VAR AMEC - TAI</fullName>
                </value>
                <value>
                    <fullName>VAR AMEC -THE NOVUS GROUP</fullName>
                </value>
                <value>
                    <fullName>VAR AMEC - THOM LUKE SALES</fullName>
                </value>
                <value>
                    <fullName>VAR EMEA - EKOM</fullName>
                </value>
                <value>
                    <fullName>VAR EMEA -MECHIONI</fullName>
                </value>
                <value>
                    <fullName>VAR EMEA - MT SYSTEMS</fullName>
                </value>
                <value>
                    <fullName>VAR EMEA - SCANTEC</fullName>
                </value>
                <value>
                    <fullName>VAR EMEA - SPECIAL-IND</fullName>
                </value>
                <value>
                    <fullName>VAR EMEA - TRITECH</fullName>
                </value>
                <value>
                    <fullName>VAR GC -  AGIANT SEMICONDUCTORS</fullName>
                </value>
                <value>
                    <fullName>VAR GC -  ANTEXUN</fullName>
                </value>
                <value>
                    <fullName>VAR GC -  ARCOTEK</fullName>
                </value>
                <value>
                    <fullName>VAR GC -  BOCCN</fullName>
                </value>
                <value>
                    <fullName>VAR GC -  BRITESTONE</fullName>
                </value>
                <value>
                    <fullName>VAR GC - CHUNDGA</fullName>
                </value>
                <value>
                    <fullName>VAR GC -  CHUNGDA</fullName>
                </value>
                <value>
                    <fullName>VAR GC - COMTECH INTERNATIONAL</fullName>
                </value>
                <value>
                    <fullName>VAR GC -  DADOUTEK</fullName>
                </value>
                <value>
                    <fullName>VAR GC - DCT TECH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Role_Sub_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>510 Security &amp; Connectivity</fullName>
                </value>
                <value>
                    <fullName>51P Standard Products FSL</fullName>
                </value>
                <value>
                    <fullName>525 Automotive</fullName>
                </value>
                <value>
                    <fullName>52N Digital Networking</fullName>
                </value>
                <value>
                    <fullName>52R RF Power</fullName>
                </value>
                <value>
                    <fullName>540 Technology &amp; Operations</fullName>
                </value>
                <value>
                    <fullName>541 THIRD PARTY WAFERS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Address__c</fullName>
        <label>Company Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan (AF)</fullName>
                </value>
                <value>
                    <fullName>Albania (AL)</fullName>
                </value>
                <value>
                    <fullName>Algeria (DZ)</fullName>
                </value>
                <value>
                    <fullName>American Samoa (AS)</fullName>
                </value>
                <value>
                    <fullName>Andorra (AD)</fullName>
                </value>
                <value>
                    <fullName>Angola (AO)</fullName>
                </value>
                <value>
                    <fullName>Anguilla (AI)</fullName>
                </value>
                <value>
                    <fullName>Antarctica (AQ)</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda (AG)</fullName>
                </value>
                <value>
                    <fullName>Argentina (AR)</fullName>
                </value>
                <value>
                    <fullName>Armenia (AM)</fullName>
                </value>
                <value>
                    <fullName>Aruba (AW)</fullName>
                </value>
                <value>
                    <fullName>Australia (AU)</fullName>
                </value>
                <value>
                    <fullName>Austria (AT)</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan (AZ)</fullName>
                </value>
                <value>
                    <fullName>Bahamas (BS)</fullName>
                </value>
                <value>
                    <fullName>Bahrain (BH)</fullName>
                </value>
                <value>
                    <fullName>Bangladesh (BD)</fullName>
                </value>
                <value>
                    <fullName>Barbados (BB)</fullName>
                </value>
                <value>
                    <fullName>Belarus (BY)</fullName>
                </value>
                <value>
                    <fullName>Belgium (BE)</fullName>
                </value>
                <value>
                    <fullName>Belize (BZ)</fullName>
                </value>
                <value>
                    <fullName>Benin (BJ)</fullName>
                </value>
                <value>
                    <fullName>Bermuda (BM)</fullName>
                </value>
                <value>
                    <fullName>Bhutan (BT)</fullName>
                </value>
                <value>
                    <fullName>Bolivia (BO)</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina (BA)</fullName>
                </value>
                <value>
                    <fullName>Botswana (BW)</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island (BV)</fullName>
                </value>
                <value>
                    <fullName>Brazil (BR)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Time_Account_Created__c</fullName>
        <description>Date Time User ID Created</description>
        <inlineHelpText>Date Time User ID Created</inlineHelpText>
        <label>Date Time User ID Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Approved__c</fullName>
        <description>Date Time Approved</description>
        <inlineHelpText>Date Time Approved</inlineHelpText>
        <label>Date Time Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Pending__c</fullName>
        <description>Date Time Pending</description>
        <inlineHelpText>Date Time Pending</inlineHelpText>
        <label>Date Time Pending</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Rejected__c</fullName>
        <description>Date Time Rejected</description>
        <inlineHelpText>Date Time Rejected</inlineHelpText>
        <label>Date Time Rejected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Disti_Role_Hierarchy__c</fullName>
        <label>Assigned Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVE</fullName>
                </value>
                <value>
                    <fullName>ADVANIDE</fullName>
                </value>
                <value>
                    <fullName>ADVANIDE AMEC</fullName>
                </value>
                <value>
                    <fullName>ADVANIDE ASIA PAC</fullName>
                </value>
                <value>
                    <fullName>ARROW AMEC</fullName>
                </value>
                <value>
                    <fullName>ARROW ASIA PAC</fullName>
                </value>
                <value>
                    <fullName>ARROW EMEA</fullName>
                </value>
                <value>
                    <fullName>ASIA LUCKY</fullName>
                </value>
                <value>
                    <fullName>AVNET AMEC</fullName>
                </value>
                <value>
                    <fullName>AVNET ASIA PAC</fullName>
                </value>
                <value>
                    <fullName>AVNET JAPAN</fullName>
                </value>
                <value>
                    <fullName>AVNET K.K.</fullName>
                </value>
                <value>
                    <fullName>CHINA ELEC</fullName>
                </value>
                <value>
                    <fullName>CHIP ONE STOP</fullName>
                </value>
                <value>
                    <fullName>DAEJIN</fullName>
                </value>
                <value>
                    <fullName>DAESUNG</fullName>
                </value>
                <value>
                    <fullName>DIGIKEY AMEC</fullName>
                </value>
                <value>
                    <fullName>EBV</fullName>
                </value>
                <value>
                    <fullName>EDAL</fullName>
                </value>
                <value>
                    <fullName>EDOM</fullName>
                </value>
                <value>
                    <fullName>ELECTROCOMPONENTES</fullName>
                </value>
                <value>
                    <fullName>ELEKTRONIKA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>EXCELPOINT</fullName>
                </value>
                <value>
                    <fullName>FARNELL</fullName>
                </value>
                <value>
                    <fullName>FORTUNE TECH GROUP</fullName>
                </value>
                <value>
                    <fullName>FUTURE AMEC</fullName>
                </value>
                <value>
                    <fullName>FUTURE ASIA PAC</fullName>
                </value>
                <value>
                    <fullName>FUTURE EU</fullName>
                </value>
                <value>
                    <fullName>GAMMA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Edit_Org_Sub_Category__c</fullName>
        <label>Edit Org Sub Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMEC Distribution</fullName>
                </value>
                <value>
                    <fullName>Asia Distribution</fullName>
                </value>
                <value>
                    <fullName>EMEA Distribution</fullName>
                </value>
                <value>
                    <fullName>Japan Distribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Edit_Org__c</fullName>
        <label>Edit Org.</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NXP Semiconductors</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>South Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Worldwide Distribution</fullName>
                </value>
                <value>
                    <fullName>STAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAGS__c</fullName>
        <label>MAGS</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>BU__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>R01 High Performance Analog</fullName>
                </value>
                <value>
                    <fullName>R05 MCO 8/16/32 BIT</fullName>
                </value>
                <value>
                    <fullName>R07 Logic</fullName>
                </value>
                <value>
                    <fullName>R16 IVN</fullName>
                </value>
                <value>
                    <fullName>R25 Connectivity</fullName>
                </value>
                <value>
                    <fullName>R33 Small Signal Bipolar</fullName>
                </value>
                <value>
                    <fullName>R34 Small signal mosfets</fullName>
                </value>
                <value>
                    <fullName>R38 Anti-Counterfeit</fullName>
                </value>
                <value>
                    <fullName>R53 Sensors Magnetic</fullName>
                </value>
                <value>
                    <fullName>R61 NXP Software</fullName>
                </value>
                <value>
                    <fullName>R62 Secure Car Access</fullName>
                </value>
                <value>
                    <fullName>R67 Mobile Power</fullName>
                </value>
                <value>
                    <fullName>R71 Protect &amp; filtering</fullName>
                </value>
                <value>
                    <fullName>R73 Auto MOS</fullName>
                </value>
                <value>
                    <fullName>R77 Smart Antenna Solutions</fullName>
                </value>
                <value>
                    <fullName>R79 Smart Power</fullName>
                </value>
                <value>
                    <fullName>R83 Personal Health</fullName>
                </value>
                <value>
                    <fullName>R90 Lighting solutions</fullName>
                </value>
                <value>
                    <fullName>RA1 Car Radio</fullName>
                </value>
                <value>
                    <fullName>RA4 MULTIMEDIA</fullName>
                </value>
                <value>
                    <fullName>RA8 AUDIO AMPLIFIERS CONSUMER</fullName>
                </value>
                <value>
                    <fullName>RAN Driver &amp; Energy Systems</fullName>
                </value>
                <value>
                    <fullName>RAS ADAS Processors</fullName>
                </value>
                <value>
                    <fullName>RB2 TIRE PRESSURE MONITORING</fullName>
                </value>
                <value>
                    <fullName>RB3 TELEMATICS</fullName>
                </value>
                <value>
                    <fullName>RB4 UNDIVIDED BL AUTO AMS</fullName>
                </value>
                <value>
                    <fullName>RB6 Auto SSL</fullName>
                </value>
                <value>
                    <fullName>RB7 Secure Mobility &amp; Retail</fullName>
                </value>
                <value>
                    <fullName>RB8 Catena</fullName>
                </value>
                <value>
                    <fullName>RB9 Catena PPA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <label>Manager Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_email_address__c</fullName>
        <label>Manager email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Org__c</fullName>
        <label>Org.</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>America</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Read_Org_Sub_Category__c</fullName>
        <label>Read Org Sub Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMEC Distribution</fullName>
                </value>
                <value>
                    <fullName>Asia Distribution</fullName>
                </value>
                <value>
                    <fullName>EMEA Distribution</fullName>
                </value>
                <value>
                    <fullName>Japan Distribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Read_Org__c</fullName>
        <label>Read Org.</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NXP Semiconductors</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>South Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Worldwide Distribution</fullName>
                </value>
                <value>
                    <fullName>STAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>South Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_End_Date__c</fullName>
        <description>Registration End Date</description>
        <formula>CASE ( Status__c , 
&quot;User A/c Created&quot; , Date_Time_Account_Created__c , 
&quot;Change made&quot; , Date_Time_Account_Created__c , 
&quot;Rejected&quot; , Date_Time_Rejected__c , 
IF(AND(Date_Time_Account_Created__c=NULL,Date_Time_Account_Created__c=NULL),NULL,NOW())
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Registration End Date</inlineHelpText>
        <label>Registration End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requester_Email_Address__c</fullName>
        <label>Requester Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Role_Hierarchy_Country_Region__c</fullName>
        <label>Role Hierarchy - Country Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Role_Hierarchy_Sub_Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Abkhazia</fullName>
                </value>
                <value>
                    <fullName>Arrow EMEA</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Avnet EMEA</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Baltics</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Benelux</fullName>
                </value>
                <value>
                    <fullName>British Islands</fullName>
                </value>
                <value>
                    <fullName>Central Other</fullName>
                </value>
                <value>
                    <fullName>East North</fullName>
                </value>
                <value>
                    <fullName>East Other</fullName>
                </value>
                <value>
                    <fullName>East South</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Future EMEA</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Iberia</fullName>
                </value>
                <value>
                    <fullName>Israel</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Kazakhstan</fullName>
                </value>
                <value>
                    <fullName>Moldova</fullName>
                </value>
                <value>
                    <fullName>Nagorno-Karabakh</fullName>
                </value>
                <value>
                    <fullName>Nordic</fullName>
                </value>
                <value>
                    <fullName>North Other</fullName>
                </value>
                <value>
                    <fullName>Regional EMEA</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>South Ossetia</fullName>
                </value>
                <value>
                    <fullName>South Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Hierarchy_Country_Sub_Region__c</fullName>
        <label>Role Hierarchy - Country Sub Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Role_Hierarchy_Country_Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Akrotiri And Dhekelia</fullName>
                </value>
                <value>
                    <fullName>Åland</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Bosnia And Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Faroe Islands</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France Central And Alps</fullName>
                </value>
                <value>
                    <fullName>France East</fullName>
                </value>
                <value>
                    <fullName>France North</fullName>
                </value>
                <value>
                    <fullName>France Paris Area</fullName>
                </value>
                <value>
                    <fullName>France South</fullName>
                </value>
                <value>
                    <fullName>France South West</fullName>
                </value>
                <value>
                    <fullName>France West</fullName>
                </value>
                <value>
                    <fullName>Germany Central</fullName>
                </value>
                <value>
                    <fullName>Germany East</fullName>
                </value>
                <value>
                    <fullName>Germany North</fullName>
                </value>
                <value>
                    <fullName>Germany South East</fullName>
                </value>
                <value>
                    <fullName>Germany South West</fullName>
                </value>
                <value>
                    <fullName>Germany West</fullName>
                </value>
                <value>
                    <fullName>Gibraltar</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Hierarchy_Region__c</fullName>
        <label>Role Hierarchy - Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>South Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Worldwide Distribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Hierarchy_Sub_Region__c</fullName>
        <label>Role Hierarchy - Sub Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Role_Hierarchy_Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Central EMEA</fullName>
                </value>
                <value>
                    <fullName>Cis</fullName>
                </value>
                <value>
                    <fullName>East EMEA</fullName>
                </value>
                <value>
                    <fullName>North EMEA</fullName>
                </value>
                <value>
                    <fullName>South EMEA</fullName>
                </value>
                <value>
                    <fullName>Emea Distribution</fullName>
                </value>
                <value>
                    <fullName>Amec Distribution</fullName>
                </value>
                <value>
                    <fullName>Asia Distribution</fullName>
                </value>
                <value>
                    <fullName>Japan Distribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>